// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaseStudyForm renders 1`] = `
<div
  className="layout"
>
  <header>
    <div
      className="content"
    >
      <h1
        aria-describedby="header-description"
        className="au-display-xl"
        styleName="styles.content-heading"
        tabIndex="-1"
      >
        Add
         case study
      </h1>
      <p
        id="header-description"
      >
        Remember, your case study must meet the 
         
        <a
          href="/assessment-criteria#"
          rel="noopener noreferrer"
          target="_blank"
        >
          assessment criteria
        </a>
        . You can update your case studies before an assessment begins. For more about assessments see the 
        <a
          href="/sellers-guide"
          rel="noopener noreferrer"
          target="_blank"
        >
          seller guide
        </a>
        .
      </p>
    </div>
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          Check the 
          <a
            href="/assessment-criteria"
          >
            assessment criteria
          </a>
           to ensure the service chosen is a good match for the case study.
        </li>
        <li>
          Case studies need to be for the company within the time period the ABN has been registered. Otherwise, state clearly that it was completed by an employee when they worked for another company.
        </li>
        <li>
          If using acronyms, their meaning must be written out clearly.
        </li>
        <li>
          Check for punctuation, spelling mistakes and grammatical errors.
        </li>
        <li>
          Use plain english to explain what you did, with reference to the tools and methodologies you used.
        </li>
        <li>
          Case studies should be for one project, not multiple.              
        </li>
      </ul>
    </div>
  </header>
  <article
    role="main"
  >
    <form
      id="casestudy__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your case study a title
        </label>
        <input
          className=""
          disabled={false}
          id="title"
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Who was the client?
        </label>
        <input
          className=""
          disabled={false}
          id="client"
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="timeframe"
        >
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint"
        >
          For example, January 2016 — June 2016.
        </p>
        <input
          className=""
          disabled={false}
          id="timeframe"
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="roles"
          id="roles-label"
        >
          What role did your business play?
        </label>
        <p
          className="hint"
          id="roles-hint"
        >
          For example, ran whole project, engaged in discovery activities or responsible for delivery.
        </p>
        <div>
          <textarea
            aria-describedby="roles-hint"
            className="under-100"
            disabled={false}
            id="roles"
            name="roles"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            70 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
          id="opportunity-label"
        >
          Outline the problem or opportunity
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            disabled={false}
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <br />
      <div
        className="calloutMistake"
      >
        <b>
           Avoid common mistakes 
        </b>
        <br />
        <span />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="approach"
          id="approach-label"
        >
          Describe your approach
        </label>
        <p
          className="hint"
          id="approach-hint"
        >
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            disabled={false}
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <b
          className="question-heading"
        >
          What was the outcome?
        </b>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div
          className="field"
        >
          <div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-0"
                >
                  1
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="outcome-0"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
            </div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-1"
                >
                  2
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="outcome-1"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button"
              >
                remove 
                <span
                  className="visuallyhidden"
                >
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button"
            >
              Add another row
            </button>
          </div>
        </div>
      </div>
      <div
        className="field"
      >
        <b
          className="question-heading"
        >
          Project links (optional)
        </b>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your case study. This can include a case study on your website, case study video or the live project. Links must begin with http
        </p>
        <div
          className="field"
        >
          <div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="project_links-0"
                >
                  1
                  .
                </label>
                <input
                  aria-describedby="project_links-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="project_links-0"
                  name="project_links[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
            </div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="project_links-1"
                >
                  2
                  .
                </label>
                <input
                  aria-describedby="project_links-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="project_links-1"
                  name="project_links[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button"
              >
                remove 
                <span
                  className="visuallyhidden"
                >
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button"
            >
              Add another row
            </button>
          </div>
        </div>
      </div>
      <div>
        <h2
          className="au-display-lg"
        >
          Referee
        </h2>
        <p
          styleName="caseStudy.referee-summary"
        >
          Client referee information will only be viewed by evaluators. It will not be published anywhere on the Digital Marketplace.
        </p>
      </div>
      <div
        className="calloutMistake"
      >
        <b>
           Avoid common mistakes 
        </b>
        <ul
          className="mistake-list"
        >
          <li>
            A referee's contact details must be supplied for all case studies. If this is not possible, you may need to supply a different case study.
          </li>
          <li>
            A referee must be from the client in the case study.
          </li>
        </ul>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeName"
        >
          Referee's name
        </label>
        <p
          className="hint"
          id="refereeName-hint"
        >
          The full name of the best person to contact about your experience.
        </p>
        <input
          className=""
          disabled={false}
          id="refereeName"
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereePosition"
        >
          Referee's position and employer
        </label>
        <p
          className="hint"
          id="refereePosition-hint"
        >
          At the time of the project.
        </p>
        <input
          className=""
          disabled={false}
          id="refereePosition"
          name="refereePosition"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeEmail"
        >
          Referee's phone number
        </label>
        <p
          className="hint"
          id="refereeEmail-hint"
        >
          Please include the area code for landlines.
        </p>
        <input
          className=""
          disabled={false}
          id="refereeEmail"
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="refereeContact"
        >
          I confirm my referee gives permission to be contacted and have their information shared as part of the assessment led by the Digital Transformation Agency.
        </label>
      </div>
      <input
        className="button"
        type="submit"
        value="Publish Case Study"
      />
    </form>
  </article>
</div>
`;

exports[`CaseStudyForm renders empty in edit mode 1`] = `
<div
  className="layout"
>
  <header>
    <div
      className="content"
    >
      <h1
        aria-describedby="header-description"
        className="au-display-xl"
        styleName="styles.content-heading"
        tabIndex="-1"
      >
        Edit
         case study
      </h1>
      <p
        id="header-description"
      >
        Remember, your case study must meet the 
         
        <a
          href="/assessment-criteria#"
          rel="noopener noreferrer"
          target="_blank"
        >
          assessment criteria
        </a>
        . You can update your case studies before an assessment begins. For more about assessments see the 
        <a
          href="/sellers-guide"
          rel="noopener noreferrer"
          target="_blank"
        >
          seller guide
        </a>
        .
      </p>
    </div>
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          Check the 
          <a
            href="/assessment-criteria"
          >
            assessment criteria
          </a>
           to ensure the service chosen is a good match for the case study.
        </li>
        <li>
          Case studies need to be for the company within the time period the ABN has been registered. Otherwise, state clearly that it was completed by an employee when they worked for another company.
        </li>
        <li>
          If using acronyms, their meaning must be written out clearly.
        </li>
        <li>
          Check for punctuation, spelling mistakes and grammatical errors.
        </li>
        <li>
          Use plain english to explain what you did, with reference to the tools and methodologies you used.
        </li>
        <li>
          Case studies should be for one project, not multiple.              
        </li>
      </ul>
    </div>
  </header>
  <article
    role="main"
  >
    <form
      id="casestudy__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your case study a title
        </label>
        <input
          className=""
          disabled={false}
          id="title"
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Who was the client?
        </label>
        <input
          className=""
          disabled={false}
          id="client"
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="timeframe"
        >
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint"
        >
          For example, January 2016 — June 2016.
        </p>
        <input
          className=""
          disabled={false}
          id="timeframe"
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="roles"
          id="roles-label"
        >
          What role did your business play?
        </label>
        <p
          className="hint"
          id="roles-hint"
        >
          For example, ran whole project, engaged in discovery activities or responsible for delivery.
        </p>
        <div>
          <textarea
            aria-describedby="roles-hint"
            className="under-100"
            disabled={false}
            id="roles"
            name="roles"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            70 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
          id="opportunity-label"
        >
          Outline the problem or opportunity
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            disabled={false}
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <br />
      <div
        className="calloutMistake"
      >
        <b>
           Avoid common mistakes 
        </b>
        <br />
        <span />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="approach"
          id="approach-label"
        >
          Describe your approach
        </label>
        <p
          className="hint"
          id="approach-hint"
        >
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            disabled={false}
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <b
          className="question-heading"
        >
          What was the outcome?
        </b>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div
          className="field"
        >
          <div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-0"
                >
                  1
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="outcome-0"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
            </div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-1"
                >
                  2
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="outcome-1"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button"
              >
                remove 
                <span
                  className="visuallyhidden"
                >
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button"
            >
              Add another row
            </button>
          </div>
        </div>
      </div>
      <div
        className="field"
      >
        <b
          className="question-heading"
        >
          Project links (optional)
        </b>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your case study. This can include a case study on your website, case study video or the live project. Links must begin with http
        </p>
        <div
          className="field"
        >
          <div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="project_links-0"
                >
                  1
                  .
                </label>
                <input
                  aria-describedby="project_links-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="project_links-0"
                  name="project_links[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
            </div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="project_links-1"
                >
                  2
                  .
                </label>
                <input
                  aria-describedby="project_links-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="project_links-1"
                  name="project_links[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button"
              >
                remove 
                <span
                  className="visuallyhidden"
                >
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button"
            >
              Add another row
            </button>
          </div>
        </div>
      </div>
      <div>
        <h2
          className="au-display-lg"
        >
          Referee
        </h2>
        <p
          styleName="caseStudy.referee-summary"
        >
          Client referee information will only be viewed by evaluators. It will not be published anywhere on the Digital Marketplace.
        </p>
      </div>
      <div
        className="calloutMistake"
      >
        <b>
           Avoid common mistakes 
        </b>
        <ul
          className="mistake-list"
        >
          <li>
            A referee's contact details must be supplied for all case studies. If this is not possible, you may need to supply a different case study.
          </li>
          <li>
            A referee must be from the client in the case study.
          </li>
        </ul>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeName"
        >
          Referee's name
        </label>
        <p
          className="hint"
          id="refereeName-hint"
        >
          The full name of the best person to contact about your experience.
        </p>
        <input
          className=""
          disabled={false}
          id="refereeName"
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereePosition"
        >
          Referee's position and employer
        </label>
        <p
          className="hint"
          id="refereePosition-hint"
        >
          At the time of the project.
        </p>
        <input
          className=""
          disabled={false}
          id="refereePosition"
          name="refereePosition"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeEmail"
        >
          Referee's phone number
        </label>
        <p
          className="hint"
          id="refereeEmail-hint"
        >
          Please include the area code for landlines.
        </p>
        <input
          className=""
          disabled={false}
          id="refereeEmail"
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="refereeContact"
        >
          I confirm my referee gives permission to be contacted and have their information shared as part of the assessment led by the Digital Transformation Agency.
        </label>
      </div>
      <input
        className="button"
        type="submit"
        value="Save Changes"
      />
    </form>
    <a
      href="http://www.right.back/to/where/you/came/from"
    >
      Return without saving
    </a>
  </article>
</div>
`;

exports[`CaseStudyForm renders with errors 1`] = `
<div
  className="layout"
>
  <header>
    <div
      className="content"
    >
      <h1
        aria-describedby="header-description"
        className="au-display-xl"
        styleName="styles.content-heading"
        tabIndex="-1"
      >
        Add
         case study
      </h1>
      <p
        id="header-description"
      >
        Remember, your case study must meet the 
         
        <a
          href="/assessment-criteria#"
          rel="noopener noreferrer"
          target="_blank"
        >
          assessment criteria
        </a>
        . You can update your case studies before an assessment begins. For more about assessments see the 
        <a
          href="/sellers-guide"
          rel="noopener noreferrer"
          target="_blank"
        >
          seller guide
        </a>
        .
      </p>
    </div>
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          Check the 
          <a
            href="/assessment-criteria"
          >
            assessment criteria
          </a>
           to ensure the service chosen is a good match for the case study.
        </li>
        <li>
          Case studies need to be for the company within the time period the ABN has been registered. Otherwise, state clearly that it was completed by an employee when they worked for another company.
        </li>
        <li>
          If using acronyms, their meaning must be written out clearly.
        </li>
        <li>
          Check for punctuation, spelling mistakes and grammatical errors.
        </li>
        <li>
          Use plain english to explain what you did, with reference to the tools and methodologies you used.
        </li>
        <li>
          Case studies should be for one project, not multiple.              
        </li>
      </ul>
    </div>
  </header>
  <article
    role="main"
  >
    <div
      className="au-body au-page-alerts   au-page-alerts--error"
    >
      <h4
        id="validation-masthead-heading"
        tabIndex="-1"
      >
        There was a problem with the details you gave
      </h4>
      <ul>
        <li>
          <a
            href="#title"
          >
            Title is required
          </a>
        </li>
        <li>
          <a
            href="#client"
          >
            Client is required
          </a>
        </li>
        <li>
          <a
            href="#timeframe"
          >
            Timeframe is required
          </a>
        </li>
        <li>
          <a
            href="#roles"
          >
            You must specify the your business' role
          </a>
        </li>
        <li>
          <a
            href="#opportunity"
          >
            You must outline the opportunity
          </a>
        </li>
        <li>
          <a
            href="#approach"
          >
            You must outline your approach
          </a>
        </li>
        <li>
          <a
            href="#outcome"
          >
            You must provide at least one outcome.
          </a>
        </li>
        <li>
          <a
            href="#refereeName"
          >
            Please provide a referee name.
          </a>
        </li>
        <li>
          <a
            href="#refereePosition"
          >
            Please provide a referee position.
          </a>
        </li>
        <li>
          <a
            href="#refereeEmail"
          >
            Please provide a referee phone number.
          </a>
        </li>
        <li>
          <a
            href="#refereeContact"
          >
            Please acknowledge the referee can be contacted.
          </a>
        </li>
      </ul>
    </div>
    <form
      action="/foo/bar"
      id="casestudy__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your case study a title
        </label>
        <div>
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <a
            className="validation-message"
            href="#title"
          >
            <span
              className="validation-message"
            >
              Title is required
            </span>
          </a>
          <br />
        </div>
        <input
          className="invalid"
          disabled={false}
          id="title"
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Who was the client?
        </label>
        <div>
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <a
            className="validation-message"
            href="#client"
          >
            <span
              className="validation-message"
            >
              Client is required
            </span>
          </a>
          <br />
        </div>
        <input
          className="invalid"
          disabled={false}
          id="client"
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="timeframe"
        >
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint"
        >
          For example, January 2016 — June 2016.
        </p>
        <div>
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <a
            className="validation-message"
            href="#timeframe"
          >
            <span
              className="validation-message"
            >
              Timeframe is required
            </span>
          </a>
          <br />
        </div>
        <input
          className="invalid"
          disabled={false}
          id="timeframe"
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="roles"
          id="roles-label"
        >
          What role did your business play?
        </label>
        <p
          className="hint"
          id="roles-hint"
        >
          For example, ran whole project, engaged in discovery activities or responsible for delivery.
        </p>
        <div>
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <a
            className="validation-message"
            href="#roles"
          >
            <span
              className="validation-message"
            >
              You must specify the your business' role
            </span>
          </a>
          <br />
        </div>
        <div>
          <textarea
            aria-describedby="roles-hint"
            className="invalid under-100"
            disabled={false}
            id="roles"
            name="roles"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            70 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
          id="opportunity-label"
        >
          Outline the problem or opportunity
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <a
            className="validation-message"
            href="#opportunity"
          >
            <span
              className="validation-message"
            >
              You must outline the opportunity
            </span>
          </a>
          <br />
        </div>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="invalid under-200"
            disabled={false}
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <br />
      <div
        className="calloutMistake"
      >
        <b>
           Avoid common mistakes 
        </b>
        <br />
        <span />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="approach"
          id="approach-label"
        >
          Describe your approach
        </label>
        <p
          className="hint"
          id="approach-hint"
        >
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <a
            className="validation-message"
            href="#approach"
          >
            <span
              className="validation-message"
            >
              You must outline your approach
            </span>
          </a>
          <br />
        </div>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="invalid under-200"
            disabled={false}
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <b
          className="question-heading"
        >
          What was the outcome?
        </b>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div>
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <a
            className="validation-message"
            href="#outcome"
          >
            <span
              className="validation-message"
            >
              You must provide at least one outcome.
            </span>
          </a>
          <br />
        </div>
        <div
          className="field"
        >
          <div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-0"
                >
                  1
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box invalid"
                  defaultValue=""
                  disabled={false}
                  id="outcome-0"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
            </div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-1"
                >
                  2
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box invalid"
                  defaultValue=""
                  disabled={false}
                  id="outcome-1"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button"
              >
                remove 
                <span
                  className="visuallyhidden"
                >
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button"
            >
              Add another row
            </button>
          </div>
        </div>
      </div>
      <div
        className="field"
      >
        <b
          className="question-heading"
        >
          Project links (optional)
        </b>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your case study. This can include a case study on your website, case study video or the live project. Links must begin with http
        </p>
        <div
          className="field"
        >
          <div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="project_links-0"
                >
                  1
                  .
                </label>
                <input
                  aria-describedby="project_links-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="project_links-0"
                  name="project_links[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
            </div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="project_links-1"
                >
                  2
                  .
                </label>
                <input
                  aria-describedby="project_links-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="project_links-1"
                  name="project_links[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button"
              >
                remove 
                <span
                  className="visuallyhidden"
                >
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button"
            >
              Add another row
            </button>
          </div>
        </div>
      </div>
      <div>
        <h2
          className="au-display-lg"
        >
          Referee
        </h2>
        <p
          styleName="caseStudy.referee-summary"
        >
          Client referee information will only be viewed by evaluators. It will not be published anywhere on the Digital Marketplace.
        </p>
      </div>
      <div
        className="calloutMistake"
      >
        <b>
           Avoid common mistakes 
        </b>
        <ul
          className="mistake-list"
        >
          <li>
            A referee's contact details must be supplied for all case studies. If this is not possible, you may need to supply a different case study.
          </li>
          <li>
            A referee must be from the client in the case study.
          </li>
        </ul>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeName"
        >
          Referee's name
        </label>
        <p
          className="hint"
          id="refereeName-hint"
        >
          The full name of the best person to contact about your experience.
        </p>
        <div>
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <a
            className="validation-message"
            href="#refereeName"
          >
            <span
              className="validation-message"
            >
              Please provide a referee name.
            </span>
          </a>
          <br />
        </div>
        <input
          className="invalid"
          disabled={false}
          id="refereeName"
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereePosition"
        >
          Referee's position and employer
        </label>
        <p
          className="hint"
          id="refereePosition-hint"
        >
          At the time of the project.
        </p>
        <div>
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <a
            className="validation-message"
            href="#refereePosition"
          >
            <span
              className="validation-message"
            >
              Please provide a referee position.
            </span>
          </a>
          <br />
        </div>
        <input
          className="invalid"
          disabled={false}
          id="refereePosition"
          name="refereePosition"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeEmail"
        >
          Referee's phone number
        </label>
        <p
          className="hint"
          id="refereeEmail-hint"
        >
          Please include the area code for landlines.
        </p>
        <div>
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <a
            className="validation-message"
            href="#refereeEmail"
          >
            <span
              className="validation-message"
            >
              Please provide a referee phone number.
            </span>
          </a>
          <br />
        </div>
        <input
          className="invalid"
          disabled={false}
          id="refereeEmail"
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div>
        <div>
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <a
            className="validation-message"
            href="#refereeContact"
          >
            <span
              className="validation-message"
            >
              Please acknowledge the referee can be contacted.
            </span>
          </a>
          <br />
        </div>
        <input
          checked={false}
          disabled={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="refereeContact"
        >
          I confirm my referee gives permission to be contacted and have their information shared as part of the assessment led by the Digital Transformation Agency.
        </label>
      </div>
      <input
        className="button"
        type="submit"
        value="Publish Case Study"
      />
    </form>
  </article>
</div>
`;

exports[`CaseStudyForm renders with form_options 1`] = `
<div
  className="layout"
>
  <header>
    <div
      className="content"
    >
      <h1
        aria-describedby="header-description"
        className="au-display-xl"
        styleName="styles.content-heading"
        tabIndex="-1"
      >
        Add
         case study
      </h1>
      <p
        id="header-description"
      >
        Remember, your case study must meet the 
         
        <a
          href="/assessment-criteria#"
          rel="noopener noreferrer"
          target="_blank"
        >
          assessment criteria
        </a>
        . You can update your case studies before an assessment begins. For more about assessments see the 
        <a
          href="/sellers-guide"
          rel="noopener noreferrer"
          target="_blank"
        >
          seller guide
        </a>
        .
      </p>
    </div>
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          Check the 
          <a
            href="/assessment-criteria"
          >
            assessment criteria
          </a>
           to ensure the service chosen is a good match for the case study.
        </li>
        <li>
          Case studies need to be for the company within the time period the ABN has been registered. Otherwise, state clearly that it was completed by an employee when they worked for another company.
        </li>
        <li>
          If using acronyms, their meaning must be written out clearly.
        </li>
        <li>
          Check for punctuation, spelling mistakes and grammatical errors.
        </li>
        <li>
          Use plain english to explain what you did, with reference to the tools and methodologies you used.
        </li>
        <li>
          Case studies should be for one project, not multiple.              
        </li>
      </ul>
    </div>
  </header>
  <article
    role="main"
  >
    <form
      action="/foo/bar"
      id="casestudy__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your case study a title
        </label>
        <input
          className=""
          disabled={false}
          id="title"
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Who was the client?
        </label>
        <input
          className=""
          disabled={false}
          id="client"
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="timeframe"
        >
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint"
        >
          For example, January 2016 — June 2016.
        </p>
        <input
          className=""
          disabled={false}
          id="timeframe"
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="roles"
          id="roles-label"
        >
          What role did your business play?
        </label>
        <p
          className="hint"
          id="roles-hint"
        >
          For example, ran whole project, engaged in discovery activities or responsible for delivery.
        </p>
        <div>
          <textarea
            aria-describedby="roles-hint"
            className="under-100"
            disabled={false}
            id="roles"
            name="roles"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            70 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
          id="opportunity-label"
        >
          Outline the problem or opportunity
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            disabled={false}
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <br />
      <div
        className="calloutMistake"
      >
        <b>
           Avoid common mistakes 
        </b>
        <br />
        <span />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="approach"
          id="approach-label"
        >
          Describe your approach
        </label>
        <p
          className="hint"
          id="approach-hint"
        >
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            disabled={false}
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <b
          className="question-heading"
        >
          What was the outcome?
        </b>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div
          className="field"
        >
          <div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-0"
                >
                  1
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="outcome-0"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
            </div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-1"
                >
                  2
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="outcome-1"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button"
              >
                remove 
                <span
                  className="visuallyhidden"
                >
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button"
            >
              Add another row
            </button>
          </div>
        </div>
      </div>
      <div
        className="field"
      >
        <b
          className="question-heading"
        >
          Project links (optional)
        </b>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your case study. This can include a case study on your website, case study video or the live project. Links must begin with http
        </p>
        <div
          className="field"
        >
          <div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="project_links-0"
                >
                  1
                  .
                </label>
                <input
                  aria-describedby="project_links-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="project_links-0"
                  name="project_links[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
            </div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="project_links-1"
                >
                  2
                  .
                </label>
                <input
                  aria-describedby="project_links-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="project_links-1"
                  name="project_links[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button"
              >
                remove 
                <span
                  className="visuallyhidden"
                >
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button"
            >
              Add another row
            </button>
          </div>
        </div>
      </div>
      <div>
        <h2
          className="au-display-lg"
        >
          Referee
        </h2>
        <p
          styleName="caseStudy.referee-summary"
        >
          Client referee information will only be viewed by evaluators. It will not be published anywhere on the Digital Marketplace.
        </p>
      </div>
      <div
        className="calloutMistake"
      >
        <b>
           Avoid common mistakes 
        </b>
        <ul
          className="mistake-list"
        >
          <li>
            A referee's contact details must be supplied for all case studies. If this is not possible, you may need to supply a different case study.
          </li>
          <li>
            A referee must be from the client in the case study.
          </li>
        </ul>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeName"
        >
          Referee's name
        </label>
        <p
          className="hint"
          id="refereeName-hint"
        >
          The full name of the best person to contact about your experience.
        </p>
        <input
          className=""
          disabled={false}
          id="refereeName"
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereePosition"
        >
          Referee's position and employer
        </label>
        <p
          className="hint"
          id="refereePosition-hint"
        >
          At the time of the project.
        </p>
        <input
          className=""
          disabled={false}
          id="refereePosition"
          name="refereePosition"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeEmail"
        >
          Referee's phone number
        </label>
        <p
          className="hint"
          id="refereeEmail-hint"
        >
          Please include the area code for landlines.
        </p>
        <input
          className=""
          disabled={false}
          id="refereeEmail"
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="refereeContact"
        >
          I confirm my referee gives permission to be contacted and have their information shared as part of the assessment led by the Digital Transformation Agency.
        </label>
      </div>
      <input
        className="button"
        type="submit"
        value="Publish Case Study"
      />
    </form>
  </article>
</div>
`;

exports[`CaseStudyForm renders with populated fields 1`] = `
<div
  className="layout"
>
  <header>
    <div
      className="content"
    >
      <h1
        aria-describedby="header-description"
        className="au-display-xl"
        styleName="styles.content-heading"
        tabIndex="-1"
      >
        Add
         case study
      </h1>
      <p
        id="header-description"
      >
        Remember, your case study must meet the 
         
        <a
          href="/assessment-criteria#"
          rel="noopener noreferrer"
          target="_blank"
        >
          assessment criteria
        </a>
        . You can update your case studies before an assessment begins. For more about assessments see the 
        <a
          href="/sellers-guide"
          rel="noopener noreferrer"
          target="_blank"
        >
          seller guide
        </a>
        .
      </p>
    </div>
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          Check the 
          <a
            href="/assessment-criteria"
          >
            assessment criteria
          </a>
           to ensure the service chosen is a good match for the case study.
        </li>
        <li>
          Case studies need to be for the company within the time period the ABN has been registered. Otherwise, state clearly that it was completed by an employee when they worked for another company.
        </li>
        <li>
          If using acronyms, their meaning must be written out clearly.
        </li>
        <li>
          Check for punctuation, spelling mistakes and grammatical errors.
        </li>
        <li>
          Use plain english to explain what you did, with reference to the tools and methodologies you used.
        </li>
        <li>
          Case studies should be for one project, not multiple.              
        </li>
      </ul>
    </div>
  </header>
  <article
    role="main"
  >
    <form
      action="https://httpbin.org/post"
      id="casestudy__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your case study a title
        </label>
        <input
          className=""
          disabled={false}
          id="title"
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Who was the client?
        </label>
        <input
          className=""
          disabled={false}
          id="client"
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="The Client Name"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="timeframe"
        >
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint"
        >
          For example, January 2016 — June 2016.
        </p>
        <input
          className=""
          disabled={false}
          id="timeframe"
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value="January 2016 — June 2016"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="roles"
          id="roles-label"
        >
          What role did your business play?
        </label>
        <p
          className="hint"
          id="roles-hint"
        >
          For example, ran whole project, engaged in discovery activities or responsible for delivery.
        </p>
        <div>
          <textarea
            aria-describedby="roles-hint"
            className="under-100"
            disabled={false}
            id="roles"
            name="roles"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            70 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
          id="opportunity-label"
        >
          Outline the problem or opportunity
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue="The opportunity"
            disabled={false}
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            198 words remaining
          </span>
        </div>
      </div>
      <br />
      <div
        className="calloutMistake"
      >
        <b>
           Avoid common mistakes 
        </b>
        <br />
        <span />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="approach"
          id="approach-label"
        >
          Describe your approach
        </label>
        <p
          className="hint"
          id="approach-hint"
        >
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            defaultValue="The approach"
            disabled={false}
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
          />
          <span
            aria-live="polite"
            className="word-count-counter"
          >
            198 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <b
          className="question-heading"
        >
          What was the outcome?
        </b>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div
          className="field"
        >
          <div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-0"
                >
                  1
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue="Outcome 1"
                  disabled={false}
                  id="outcome-0"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
            </div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-1"
                >
                  2
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue="Outcome 2"
                  disabled={false}
                  id="outcome-1"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button"
              >
                remove 
                <span
                  className="visuallyhidden"
                >
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button"
            >
              Add another row
            </button>
          </div>
        </div>
      </div>
      <div
        className="field"
      >
        <b
          className="question-heading"
        >
          Project links (optional)
        </b>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your case study. This can include a case study on your website, case study video or the live project. Links must begin with http
        </p>
        <div
          className="field"
        >
          <div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="project_links-0"
                >
                  1
                  .
                </label>
                <input
                  aria-describedby="project_links-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="project_links-0"
                  name="project_links[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
            </div>
            <div
              className="list-entry row"
            >
              <div
                className="col-xs-12 col-sm-9"
              >
                <label
                  className="text-box-number-label"
                  htmlFor="project_links-1"
                >
                  2
                  .
                </label>
                <input
                  aria-describedby="project_links-hint"
                  className="text-box "
                  defaultValue=""
                  disabled={false}
                  id="project_links-1"
                  name="project_links[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button"
              >
                remove 
                <span
                  className="visuallyhidden"
                >
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button"
            >
              Add another row
            </button>
          </div>
        </div>
      </div>
      <div>
        <h2
          className="au-display-lg"
        >
          Referee
        </h2>
        <p
          styleName="caseStudy.referee-summary"
        >
          Client referee information will only be viewed by evaluators. It will not be published anywhere on the Digital Marketplace.
        </p>
      </div>
      <div
        className="calloutMistake"
      >
        <b>
           Avoid common mistakes 
        </b>
        <ul
          className="mistake-list"
        >
          <li>
            A referee's contact details must be supplied for all case studies. If this is not possible, you may need to supply a different case study.
          </li>
          <li>
            A referee must be from the client in the case study.
          </li>
        </ul>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeName"
        >
          Referee's name
        </label>
        <p
          className="hint"
          id="refereeName-hint"
        >
          The full name of the best person to contact about your experience.
        </p>
        <input
          className=""
          disabled={false}
          id="refereeName"
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereePosition"
        >
          Referee's position and employer
        </label>
        <p
          className="hint"
          id="refereePosition-hint"
        >
          At the time of the project.
        </p>
        <input
          className=""
          disabled={false}
          id="refereePosition"
          name="refereePosition"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="refereeEmail"
        >
          Referee's phone number
        </label>
        <p
          className="hint"
          id="refereeEmail-hint"
        >
          Please include the area code for landlines.
        </p>
        <input
          className=""
          disabled={false}
          id="refereeEmail"
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="refereeContact"
        >
          I confirm my referee gives permission to be contacted and have their information shared as part of the assessment led by the Digital Transformation Agency.
        </label>
      </div>
      <input
        className="button"
        type="submit"
        value="Publish Case Study"
      />
    </form>
  </article>
</div>
`;
